--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -161,7 +161,38 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle">My Background</span>
+
+        <div class="about__container container grid">
+          <img src="assets/img/about.png" alt="" class="about__img" />
+
+          <div class="about__data">
+            <p class="about__description">
+              I'm a motivated college freshman pursuing a Computer Science
+              degree, backed by a dynamic internship experience in an Agile
+              Software Engineering setting. During my internship, I had the
+              exciting opportunity to contribute to the BE team, shaping the web
+              application RPGMatch using Python and AWS technologies. Freshly
+              certified as an AWS Certified Cloud Practitioner, I'm currently on
+              the lookout for Summer 2024 SWE/Tech internship opportunities. I
+              am currently expanding my skillset to frontend web development
+              with a CodePath course. My goal is to further cultivate my skills
+              in a hands-on environment while making meaningful contributions.
+              At the moment, I am particularly interested in software engineering, backend web
+              development or devops/sysadmin adjacent roles. 
+            </p>
+
+            <div class="about__buttons">
+              <a download ="" href="assets/pdf/Larry Resume.pdf" class="button button--flex">
+                Download Resume<i class="uil uil-download-alt button__icon"></i>
+              </a>
+            </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SKILLS ====================-->
       <section class="skills section" id="skills"></section>
