--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -16,7 +16,8 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Responsive Portfolio Website</title>
+    <title>Larry's Website</title>
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
   </head>
   <body>
     <!--==================== HEADER ====================-->
