Fix: email link not working

--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -90,7 +90,7 @@
               </a>
 
               <a
-                href="hhttps://app.joinhandshake.com/stu/users/49049967"
+                href="mailto:larryquocla@gmail.com"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -241,7 +241,7 @@
     const subtitleElement = document.querySelector('#typed-output');
     const cursorElement = document.querySelector('#typed-cursor');
     const typed = new Typed(subtitleElement, {
-      strings: ["Placeholder","Software Engineer", "Cloud Professional", "Web Developer"],
+      strings: ["Placeholder","Software Engineer", "DevOps Engineer", "Backend Web Developer"],
       typeSpeed: 100,
       backSpeed: 100, 
       startDelay: 1000,
