feat: re-ordering of sections

--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -27,7 +27,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="" class="nav__logo">Larry</a>
+        <a href="#home" class="nav__logo">Larry</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -44,14 +44,14 @@
             </li>
 
             <li class="nav__item">
-              <a href="#skills" class="nav__link">
-                <i class="uil uil-file-alt nav__icon"></i> Skills
+              <a href="#experience" class="nav__link">
+                <i class="uil uil-briefcase-alt nav__icon"></i> Experience
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#experience" class="nav__link">
-                <i class="uil uil-briefcase-alt nav__icon"></i> Experience
+              <a href="#skills" class="nav__link">
+                <i class="uil uil-file-alt nav__icon"></i> Skills
               </a>
             </li>
 
@@ -201,6 +201,10 @@
         </div>
       </section>
 
+      <!--==================== QUALIFICATION ====================-->
+      <section class="qualification section"></section>
+
+
       <!--==================== SKILLS ====================-->
       <section class="skills section" id="skills">
         <h2 class="section__title">Skills</h2>
@@ -300,9 +304,6 @@
                       </div>
                     </div>
       </section>
-
-      <!--==================== QUALIFICATION ====================-->
-      <section class="qualification section"></section>
 
       <!--==================== PORTFOLIO ====================-->
       <section class="portfolio section" id="portfolio"></section>
