--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -168,6 +168,11 @@
         </div>
       </section>
 
+      <br>
+      <br>
+      <br>
+      <br>
+
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
         <h2 class="section__title">About Me</h2>
@@ -203,7 +208,7 @@
       </section>
 
             <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
+            <section class="qualification section" id="experience">
                 <h2 class="section__title">Experience</h2>
                 <span class="section__subtitle">My Education & Experience</span>
 
@@ -306,6 +311,8 @@
                     </div>
                 </div>
             </section>
+
+      <br>
 
       <!--==================== SKILLS ====================-->
       <section class="skills section" id="skills">
