Fix: Skills now side by side

--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -367,6 +367,59 @@
                   </div>
                 </div>
 
+
+                           <!--=============== SKILLS 2 ===============-->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <div>
+                  <h1 class="skills__title"></h1>
+                  <span class="skills__subtitle"></span>
+                </div>
+              </div>
+
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name"></h3>
+                    <span class="skills__number"></span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__placeholder"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name"></h3>
+                    <span class="skills__number"></span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__placeholder"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name"></h3>
+                    <span class="skills__number"></span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__placeholder"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name"></h3>
+                    <span class="skills__number"></span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__placeholder"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
                 
 
                  <!--==================== SKILLS 2 ====================-->
