Feat: New Home Icon

--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -27,7 +27,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#home" class="nav__logo">Larry</a>
+        <a href="#home" class="nav__logo"><img src="assets/img/favicon.ico"></a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -56,8 +56,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="#portfolio" class="nav__link">
-                <i class="uil uil-scenery nav__icon"></i> Portfolio
+              <a href="#projects" class="nav__link">
+                <i class="uil uil-scenery nav__icon"></i> Projects
               </a>
             </li>
 
@@ -481,8 +481,8 @@
                     </div>
       </section>
 
-      <!--==================== PORTFOLIO ====================-->
-      <section class="portfolio section" id="portfolio"></section>
+      <!--==================== Projects ====================-->
+      <section class="projects section" id="Projects"></section>
 
       <!--==================== CONTACT ME ====================-->
       <section class="contact section" id="contact"></section>
