--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -15,7 +15,7 @@
           
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -482,7 +482,92 @@
       </section>
 
       <!--==================== Projects ====================-->
-      <section class="projects section" id="Projects"></section>
+      <section class="portfolio section" id="projects">
+        <h2 class="section__title">Projects</h2>
+        <span class="section__subtitle">My Recent Works</span>
+
+        <div class="portfolio__container container swiper-container">
+          <div class="swiper-wrapper">
+            <!--=============== Project 1 ===============-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/CloudResume.png"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Cloud Personal Website</h3>
+                <p class="portfolio__description">
+                  Explore my personal website, developed to take on the Cloud Resume Challenge, utilizing HTML/CSS/JS. Hosted on AWS S3, it leverages AWS Lambda functions for dynamic features, all orchestrated through a CI/CD pipeline powered by GitHub Actions. The underlying infrastructure is efficiently managed and scaled following infrastructure as a code principle using Terraform. 
+                </p>
+                <a
+                  href="https://github.com/larrylaa/Cloud-Portfolio-Website"
+                  class="button button--flex button--small portfolio__button"
+                >
+                Github Repository
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!--=============== Project 2 ===============-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/GradLink.svg"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">GradLink</h3>
+                <p class="portfolio__description">
+                  A web application designed to simplify the college application process by connecting high school students with college student mentors. It's mission is to provide essential guidance and support, ensuring that every student, regardless of their background, can confidently pursue higher education.
+                </p>
+                <a
+                  href="https://llaadvocacyproject.larryla1.repl.co/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                Live Demo (W.I.P)  
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!--=============== Project 3 ===============-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/Icebreak.jpg"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">CPP SEA Icebreak</h3>
+                <p class="portfolio__description">
+                  A platform for organizations to interact with their members. A central hub for members to be always updated on the latest events while providing features to incentivize member growth. As a member of Cal Poly Pomona's Software Engineering Association, I am currently stationed on the backend team of the project, working with ExpressJS, Prisma ORM, and PostgreSQL.
+                </p>
+                <a
+                  href="https://github.com/cppsea/icebreak"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Github Repository
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+          </div>
+
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
 
       <!--==================== CONTACT ME ====================-->
       <section class="contact section" id="contact"></section>
@@ -494,7 +579,7 @@
     <!--==================== SCROLL TOP ====================-->
 
     <!--==================== SWIPER JS ====================-->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
     <script src="assets/js/main.js"></script>
