--- a/Larry Portfolio Website/index.html
+++ b/Larry Portfolio Website/index.html
@@ -489,6 +489,7 @@
       <br>
       <br>
 
+
       <!--==================== Projects ====================-->
       <section class="portfolio section" id="projects">
         <h2 class="section__title">Projects</h2>
@@ -553,7 +554,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">CPP SEA Icebreak</h3>
                 <p class="portfolio__description">
-                  A platform for organizations to interact with their members. A central hub for members to be always updated on the latest events while providing features to incentivize member growth. As a member of Cal Poly Pomona's Software Engineering Association, I am currently stationed on the backend team of the project, working with ExpressJS, Prisma ORM, and PostgreSQL.
+                  A platform for organizations to interact with their members. A central hub for members to be always updated on the latest events while providing features to incentivize member growth. As a member of Cal Poly Pomona's Software Engineering Association, I am currently stationed on the backend team of the project, working with ExpressJS, Prisma ORM, and PostgreSQL simulating an Agile SWE environment. 
                 </p>
                 <a
                   href="https://github.com/cppsea/icebreak"
@@ -578,7 +579,10 @@
       </section>
 
       <!--==================== CONTACT ME ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <h2 class="section__title">Contact Me</h2>
+        <span class="section__subtitle">My Contact Information</span>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
