Fix: relocating files

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
       <!--==================== CONTACT ME ====================-->
       <section class="contact section" id="contact">
         <h2 class="section__title">Contact Me</h2>
-        <span class="section__subtitle">My Contact Information</span>
+        <span class="section__subtitle">Let's Get In Touch!</span>
       </section>
     </main>
 
