Fix: profile image not showing

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     class="home__blob-img"
                     x="18"
                     y="-3"
-                    xlink:href="assets/img/Larry.png"
+                    xlink:href="assets/img/larry.png"
                   />
                 </g>
               </svg>
