Fix: section spacing for for 100% google default zoom

--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
       <br>
       <br>
       <br>
+      <br>
+      <br>
+      <br>
+      
 
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
@@ -209,7 +213,8 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section" id="experience">
-                <h2 class="section__title">Experience</h2>
+                <h2 class="section__title">
+                  <br>Experience</h2>
                 <span class="section__subtitle">My Education & Experience</span>
 
                 <div class="qualification__container container">
@@ -312,6 +317,9 @@
                 </div>
             </section>
 
+      <br>
+      <br>
+      <br>
       <br>
 
       <!--==================== SKILLS ====================-->
@@ -481,6 +489,9 @@
                     </div>
       </section>
 
+      <br>
+      <br>
+      <br>
       <br>
       <br>
       <br>
