--- a/index.html
+++ b/index.html
@@ -589,12 +589,80 @@
         </div>
       </section>
 
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
       <!--==================== CONTACT ME ====================-->
       <section class="contact section" id="contact">
         <h2 class="section__title">Contact Me</h2>
         <span class="section__subtitle">Let's Get In Touch!</span>
-      </section>
-    </main>
+
+      <div class="contact__container container grid">
+        <div>
+          <div class="contact__information">
+            <i class="uil uil-linkedin contact__icon"></i>
+            <div>
+
+              <h3 class="contact__title">LinkedIn</h3>
+              <span class="contact__subtitle"><a class="nochange" href="https://www.linkedin.com/in/lqla">www.linkedin.com/in/lqla</a></span>
+            </div>
+          </div>
+
+          <div class="contact__information">
+            <i class="uil uil-envelope contact__icon"></i>
+            <div>
+              <h3 class="contact__title">Email</h3>
+              <span class="contact__subtitle"><a class="nochange" href="mailto:larryquocla@gmail.com">larryquocla@gmail.com</a></span>
+            </div>
+          </div>
+
+          <div class="contact__information">
+            <i class="uil uil-map-marker contact__icon"></i>
+            <div>
+              <h3 class="contact__title">Location</h3>
+              <span class="contact__subtitle"
+                ><a class="nochange" href="https://maps.app.goo.gl/wQo4BTvhJvCUPTdw6">Los Angeles Metropolitan Area</a></span
+              >
+            </div>
+          </div>
+        </div>
+
+        <form action="#home" id="contactForm" class="contact__form grid">
+          <div class="contact__inputs grid">
+            <div class="contact__content">
+              <label for="" class="contact__label">Name</label>
+              <input type="text" class="contact__input" required/>
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Email</label>
+              <input type="email" class="contact__input" required/>
+            </div>
+          </div>
+          <div class="contact__content">
+            <label for="" class="contact__label">Company</label>
+            <input type="text" class="contact__input" required/>
+          </div>
+          <div class="contact__content">
+            <label for="" class="contact__label">Message <br>Note: Currently Not Working, Please Contact Via Email </label>
+            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+          </div>
+      
+          <div>
+            <button type="submit" class="button button--flex">
+              Send Message
+              <i class="uil uil-message button__icon"></i>
+            </button>
+          </div>
+        </form>
+      </div>
+
+    </section>
+  </main>
+
+  <br>
 
     <!--==================== FOOTER ====================-->
     <footer class="footer"></footer>
