Feat: footer, dark mode, scroll bar

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         </div>
 
         <div class="nav__btns">
+          <i class="uil uil-moon change-theme" id="theme-button"></i>
+
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
@@ -665,9 +667,58 @@
   <br>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__bg">
+        <div class="footer__container container grid">
+          <div>
+            <h1 class="footer__title">Larry</h1>
+          </div>
 
-    <!--==================== SCROLL TOP ====================-->
+          <ul class="footer__links">
+            <li>
+              <a href="#experience" class="footer__link"></a>
+            </li>
+            <li>
+              <a href="#projects" class="footer__link"></a>
+            </li>
+            <li>
+              <a href="#skills" class="footer__link"></a>
+            </li>
+          </ul>
+
+        <div class="footer__socials">
+          <a
+            href="https://www.linkedin.com/in/lqla/"
+            target="_blank"
+            class="footer__social"
+          >
+            <i class="uil uil-linkedin"></i>
+          </a>
+          <a
+            href="https://github.com/larrylaa"
+            target="_blank"
+            class="footer__social"
+          >
+            <i class="uil uil-github"></i>
+          </a>
+          <a
+            href="mailto:larryquocla@gmail.com"
+            target="_blank"
+            class="footer__social"
+          >
+            <i class="uil uil-envelope-edit"></i>
+          </a>
+        </div>
+      </div>
+
+        <p class="footer__copy">&#169; Larry La. All Rights Reserved</p>
+      </div>
+    </footer>
+
+    <!--========== SCROLL TOP ==========-->
+    <a href="#" class="scrollup" id="scroll-top">
+      <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
 
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
