feat: temp visitor counter + resume update

--- a/index.html
+++ b/index.html
@@ -153,10 +153,13 @@
                 First Year Student @ Cal Poly Pomona Studying Computer Science,
                 Seeking Summer 2024 Internship Opportunities.
               </p>
+
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
               </a>
+              <p class="visit__counter">Site Vists:</p>
             </div>
+
           </div>
           
 
@@ -204,7 +207,7 @@
             </p>
 
             <div class="about__buttons">
-              <a download ="" href="assets/pdf/Larry Resume.pdf" class="button button--flex">
+              <a download ="" href="assets/pdf/Larry's Resume.pdf" class="button button--flex">
                 Download Resume<i class="uil uil-download-alt button__icon"></i>
               </a>
             </div>
@@ -547,10 +550,10 @@
                   A web application designed to simplify the college application process by connecting high school students with college student mentors. It's mission is to provide essential guidance and support, ensuring that every student, regardless of their background, can confidently pursue higher education.
                 </p>
                 <a
-                  href="https://llaadvocacyproject.larryla1.repl.co/"
+                  href="https://www.figma.com/file/sdtIxpX8NGEEN9tRWdnhYx/GradLink?type=design&node-id=0-1&mode=design"
                   class="button button--flex button--small portfolio__button"
                 >
-                Live Demo (W.I.P)  
+                Wireframe
                   <i class="uil uil-arrow-right button__icon"></i>
                 </a>
               </div>
