--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
               </a>
-              <p class="visit__counter">Site Vists:</p>
+              <p class="visit__counter">Site Vists: <span id="counterValue"></span> </p>
             </div>
 
           </div>
