fix: react skills bar not scaling

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                 <span class="skills_number">40%</span>
                               </div>
                               <div class="skills__bar">
-                                <span class="skills__percentage skills__"></span>
+                                <span class="skills__percentage skills__react"></span>
                               </div>
                             </div>
                   </div>
