--- a/index.html
+++ b/index.html
@@ -580,6 +580,9 @@
         <span class="section__subtitle">My Professional Certifications</span>
 
         <div style="text-align: center;">
+          <a href="https://www.credly.com/badges/ac32e394-42cb-434a-b426-ddae9a19a193/linked_in_profile" target="_blank">
+            <img src="assets/img/solutionsarch.png" alt="AWS Certified Solutions Architect Associate" style="width: 200px; height: auto;">
+          </a>
           <a href="https://www.credly.com/badges/3ec4c877-ac27-4291-b8fc-d578695e6c9c/linked_in_profile" target="_blank">
             <img src="assets/img/awsccp.png" alt="AWS Certified Cloud Practitioner" style="width: 200px; height: auto;">
           </a>
