--- a/index.html
+++ b/index.html
@@ -328,14 +328,33 @@
                         <!--=============== WORK EXPERIENCE SECTION ===============-->
                         <div class="qualification__content qualification__active" data-content id="work">
                             <!--=============== QUALIFICATION 1 ===============-->
-                          <!--=============== Work  0 (CURRENT)===============-->
+                        <!--=============== Work 0 (CURRENT)===============-->
+                        <div class="qualification__data">                                 
+                          <div></div>
+
+                          <div>
+                              <span class="qualification__rounder"></span>
+                              <span class="qualification__line"></span>
+                          </div>
+
+                          <div>
+                              <h3 class="qualification__title">Mobile and Web Applications Student Assistant</h3>
+                              <span class="qualification__subtitle">Cal Poly Pomona IT - Remote</span>
+                              <div class="qualification__calendar">
+                                  <i class="uil uil-calendar-alt"></i>
+                                  Aug 2024 - Present
+                              </div>
+                          </div>
+                      </div>
+
+                          <!--=============== Work  1 ===============-->
                           <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">IT Intern (Software Engineering)</h3>
                                 <span class="qualification__subtitle">Desco Industries Inc. - Chino, CA</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    May 2024 - Present
+                                    May 2024 - Aug 2024
                                 </div>
                             </div>
 
@@ -347,7 +366,7 @@
 
 
   
-                        <!--=============== Work 1 ===============-->
+                        <!--=============== Work 2 ===============-->
                         <div class="qualification__data">                                 
                             <div></div>
 
@@ -368,7 +387,7 @@
 
                         
 
-                        <!--=============== Work 2 ===============-->
+                        <!--=============== Work 3 ===============-->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Engineer Intern</h3>
