chore: update title

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <span class="typed-text-color" id="typed-output"><span id="typed-cursor"></span></span>
               </h3>
               <p class="home__description">
-                Sophomore Student @ Cal Poly Pomona Studying Computer Science,
+                Sophomore @ Cal Poly Pomona Studying Computer Science,
                 Seeking Summer 2025 Internship Opportunities.
               </p>
 
@@ -209,7 +209,7 @@
             </p>
 
             <div class="about__buttons">
-              <a download ="" href="assets/pdf/Larry La Resume.pdf" class="button button--flex">
+              <a download ="" href="assets/pdf/Larry_La_Resume.pdf" class="button button--flex">
                 Download Resume<i class="uil uil-download-alt button__icon"></i>
               </a>
             </div>
@@ -350,7 +350,7 @@
                           <!--=============== Work  1 ===============-->
                           <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">IT Intern (Software Engineering)</h3>
+                                <h3 class="qualification__title">Software Engineer Intern (IT)</h3>
                                 <span class="qualification__subtitle">Desco Industries Inc. - Chino, CA</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
